--- a/public/scraper.html
+++ b/public/scraper.html
@@ -6,25 +6,49 @@
     <title>Main Content Scraper</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+        }
+    </style>
 </head>
 <body class="bg-gray-100 min-h-screen">
     <div class="container mx-auto px-4 py-8">
-        <h1 class="text-2xl font-bold mb-6">Main Content Scraper</h1>
-        <a href="index.html" class="text-blue-600 underline mb-4 inline-block">&larr; Back to Tools Home</a>
-        <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
-            <div class="flex gap-4 mb-4">
-                <input type="url" id="urlInput" placeholder="Enter website URL (e.g., https://example.com)" class="flex-1 px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
-                <button id="convertBtn" class="px-6 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors">Convert</button>
+        <div class="max-w-4xl mx-auto">
+            <div class="flex items-center mb-8">
+                <a href="index.html" class="text-blue-600 hover:text-blue-800 mr-4">← Back to Tools</a>
+                <h1 class="text-3xl font-bold">Main Content Scraper</h1>
             </div>
-            <div id="loadingSpinner" class="hidden mb-4">
-                <div class="flex justify-center items-center">
-                    <div class="animate-spin rounded-full h-10 w-10 border-b-2 border-blue-500"></div>
+            
+            <div class="bg-white rounded-lg shadow-md p-6 mb-6">
+                <div class="mb-4">
+                    <label for="urlInput" class="block text-sm font-medium text-gray-700 mb-2">Enter URL to scrape:</label>
+                    <div class="flex gap-2">
+                        <input type="url" id="urlInput" 
+                               class="flex-1 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                               placeholder="https://example.com">
+                        <button id="convertBtn" 
+                                class="px-6 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 transition-colors">
+                            Scrape
+                        </button>
+                    </div>
                 </div>
+
+                <div id="loadingSpinner" class="hidden">
+                    <div class="flex justify-center items-center py-4">
+                        <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-500"></div>
+                    </div>
+                </div>
+
+                <div id="errorMessage" class="hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert"></div>
             </div>
-            <div id="errorMessage" class="hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4"></div>
-            <div id="resultContainer" class="mt-4"></div>
+
+            <div id="resultContainer" class="space-y-6"></div>
         </div>
     </div>
-    <script src="scraper.js"></script>
+
+    <script src="js/scraper.js"></script>
 </body>
 </html> 
